--- a/misc/planering.html
+++ b/misc/planering.html
@@ -27,7 +27,7 @@
 
     <h2>1. Idébeskrivning</h2>
     <!-- Vad ska du göra? Vilken är din målgrupp? Om du utvecklar en tidigare sida; Vad ska du förändra/utveckla? -->
-  
+        Jag tänker att jag ska göra en hemsida som tipsar om de bästa sakerna inom olika kategorier, t.ex. bästa låtarna, bästa recepten osv. Målgruppen är egentligen vem som helst som letar efter att upptäcka nya saker och tips. 
 
     <h2>2. Planering</h2>
 
@@ -49,9 +49,11 @@
             <td>
                 Planerar och skissar
                 <!-- Vad görs på lektionen vecka 4? -->
+                Planeringen, Idébeskrivning och skisser. 
             </td>
             <td>
                 <!-- Vad görs utanför lektionen vecka 4? -->
+                Tänker ut vad jag vill ha för innehåll på min sida, till exempel om jag ska skapa en spotify-lista att länka, hitta bra recept osv. 
             </td>
         </tr>
 
@@ -59,9 +61,11 @@
             <td>5</td>
             <td>
                 <!-- Vad görs på lektionen vecka 5? -->
+                Hittar bilder, gör en strukturerad lista över allt innehåll jag vill ha med på min sida. Fundera på exakt hur jag vill att min nav ska se ut osv. Börjar ev programmera.
             </td>
             <td>
                 <!-- Vad görs utanför lektionen vecka 5? -->
+                Bli klar med allt som ska vara gjort hitills. 
             </td>
         </tr>
 
@@ -69,6 +73,8 @@
             <td>6</td>
             <td>
                 <!-- Vad görs på lektionen vecka 6? -->
+                Börjar skriva koden för att se vad jag vill/måste göra. Börjar med första sidan och css:en.  
+
             </td>
             <td>
                 <!-- Vad görs utanför lektionen vecka 6? -->
@@ -79,6 +85,7 @@
             <td>7</td>
             <td>
                 <!-- Vad görs på lektionen vecka 7? -->
+                LEDIG 
             </td>
             <td>
                 <!-- Vad görs utanför lektionen vecka 7? -->
@@ -89,6 +96,7 @@
             <td>8</td>
             <td>
                 <!-- Vad görs på lektionen vecka 8? -->
+                Skriva kod, andra sidan 
             </td>
             <td>
                 <!-- Vad görs utanför lektionen vecka 8? -->
@@ -99,6 +107,7 @@
             <td>9</td>
             <td>
                 <!-- Vad görs på lektionen vecka 9? -->
+                Skriva kod, tredje sidan
             </td>
             <td>
                 <!-- Vad görs utanför lektionen vecka 9? -->
@@ -109,6 +118,7 @@
             <td>10</td>
             <td>
                 <!-- Vad görs på lektionen vecka 10? -->
+                Skriva kod, fjärde sidan
             </td>
             <td>
                 <!-- Vad görs utanför lektionen vecka 10? -->
@@ -119,6 +129,7 @@
             <td>11</td>
             <td>
                 <!-- Vad görs på lektionen vecka 11? -->
+                Skriva kod, femte sidan
             </td>
             <td>
                 <!-- Vad görs utanför lektionen vecka 11? -->
@@ -129,6 +140,7 @@
             <td>12</td>
             <td>
                 <!-- Vad görs på lektionen vecka 12? -->
+                Testar sidan, samt justeringar, utvärdering 
             </td>
             <td>
                 <!-- Vad görs utanför lektionen vecka 12? -->
