länkade bland annat de andra sidorna

--- a/index.html
+++ b/index.html
@@ -6,29 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="css/css.css">
+    <link href="https://fonts.googleapis.com/css?family=Barlow|Quattrocento+Sans|Quicksand&display=swap" rel="stylesheet">
 </head>
 <body>
     <Header><img id="logo" src="img/logo.png" alt=""></Header>
 
     <nav id="meny">
-        <a href="">TIPSA</a>
+        <a href="index.html">HEM</a>
+        <a href="tipsa.html">TIPSA</a>
         <div class="dropdown">
         <a  id="kategorier" href="#">KATEGORIER ⇓</a>
-            <div class="dropdown-content">
-                <a href="">MUSIK</a>
-                <br><a href="">RECEPT</a>
-                <br><a href="">FILMER</a>
-                <br><a href="">BÖCKER</a>
-            </div>
         </div>
-        <a href="">OM OSS</a>
+        <a href="omoss.html">OM OSS</a>
     </nav>
-
+    <div id="dropdown-content">
+        <a href="kategori.html">MUSIK</a>
+        <a href="">RECEPT</a>
+        <a href="">FILMER</a>
+        <a href="">BÖCKER</a>
+    </div>
     
 
     <div id="start"><img  src="img/bergstopp-tapet-3072x576-1736_124.jpg" alt=""></div>
     
-
+    <h2>Populärast just nu</h2>    
     <section>
         <img id="b1" src="img/album1.jpg" alt="">
         <article id="a1">
