--- a/misc/planering.html
+++ b/misc/planering.html
@@ -96,7 +96,7 @@
             <td>8</td>
             <td>
                 <!-- Vad görs på lektionen vecka 8? -->
-                Skriva kod, andra sidan 
+                Skriva kod, fokus på att få in innehåll på sidorna. Uppdatera planering. 
             </td>
             <td>
                 <!-- Vad görs utanför lektionen vecka 8? -->
@@ -107,7 +107,7 @@
             <td>9</td>
             <td>
                 <!-- Vad görs på lektionen vecka 9? -->
-                Skriva kod, tredje sidan
+                Skriva kod, fokus på att lära mig mer om dropdown, transtions och andra funktioner som jag vill ha på sidorna. Skriva css för att ordna innehållet jag lagt in. 
             </td>
             <td>
                 <!-- Vad görs utanför lektionen vecka 9? -->
@@ -118,7 +118,7 @@
             <td>10</td>
             <td>
                 <!-- Vad görs på lektionen vecka 10? -->
-                Skriva kod, fjärde sidan
+                Skriva kod
             </td>
             <td>
                 <!-- Vad görs utanför lektionen vecka 10? -->
@@ -129,7 +129,7 @@
             <td>11</td>
             <td>
                 <!-- Vad görs på lektionen vecka 11? -->
-                Skriva kod, femte sidan
+                Skriva kod
             </td>
             <td>
                 <!-- Vad görs utanför lektionen vecka 11? -->
@@ -155,15 +155,19 @@
 
     <h3>Lektion vecka 4</h3>
     <!-- Fyll på med dokumentation här. -->
+    Börjar med Idébeskrivning och skisser samt planering.
 
     <h3>Lektion vecka 5</h3>
     <!-- Fyll på med dokumentation här. -->
+    Börjar kolla upp hur jag ska strukturera sidorna och vad jag behöver använda för verktyg och vad jag behöver lära mer av. Börjar skiva koden för att få in det mest grundläggande. 
 
     <h3>Lektion vecka 6</h3>
     <!-- Fyll på med dokumentation här. -->
+    Jobbar med css för första sidan och anpassa den för mobilt-, ipad- och desktopläge. 
 
     <h3>Lektion vecka 8</h3>
     <!-- Fyll på med dokumentation här. -->
+    Jobbar med att få in innehåll på undersidorna samt strukturera de genom css. Funderar på vad jag behöver när det kommer till js och nya sakere som dropdown och transtions.
 
     <h3>Lektion vecka 9</h3>
     <!-- Fyll på med dokumentation här. -->
