--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <h2>Populärast just nu</h2>    
     <section>
         <img id="b1" src="img/album1.jpg" alt="">
-        <article id="a1">
+        <a id="a1" href="justden.html">
             <h3>Yeezus - Kayne West</h3>
             <p>Yeezus is the sixth studio album by American rapper and producer Kanye West. It was released on June 18, 2013, through Def Jam Recordings and Roc-A-Fella Records. West gathered a number of artists and close collaborators for the production. </p>
-        </article>
+        </a>
         <img id="b2" src="img/recept1.jpg" alt="">
         <article id="a2">
             <h3>Ratatouille</h3>
@@ -49,10 +49,10 @@
     </section>
 
     <footer>
-        <a href="misc/planering.html">Planering</a>
-        <img id="footer" src="img/Facebook_logo_(square).png" alt="">
-        <img id="footer" src="img/instagram-logos-png-images-free-download-2.png" alt="" srcset="">
-        <img id="footer" src="img/1024px-Spotify_logo_without_text.svg.png" alt="">
+        <a id="planering" href="misc/planering.html">Planering</a>
+        <a id="footer" href="https://www.facebook.com/"><img  src="img/Facebook_logo_(square).png" alt=""></a>
+        <a id="footer" href="https://www.instagram.com/"><img src="img/instagram-logos-png-images-free-download-2.png" alt="" srcset=""></a>
+        <a id="footer" href="https://www.spotify.com/se/"><img src="img/1024px-Spotify_logo_without_text.svg.png" alt=""></a>
 
       
     </footer>
