rättade till ändringar enligt andra html

--- a/omoss.html
+++ b/omoss.html
@@ -16,15 +16,15 @@
         <a href="tipsa.html">TIPSA</a>
         <div class="dropdown">
         <a  id="kategorier" href="#">KATEGORIER ⇓</a>
-            <div class="dropdown-content">
-                <a href="kategori.html">MUSIK</a>
-                <br><a href="">RECEPT</a>
-                <br><a href="">FILMER</a>
-                <br><a href="">BÖCKER</a>
-            </div>
         </div>
         <a href="omoss.html">OM OSS</a>
     </nav>
+    <div id="dropdown-content">
+        <a href="kategori.html">MUSIK</a>
+        <a href="">RECEPT</a>
+        <a href="">FILMER</a>
+        <a href="">BÖCKER</a>
+    </div>
 
     
 
@@ -50,10 +50,10 @@
     </section>
 
     <footer>
-        <a href="misc/planering.html">Planering</a>
-        <img id="footer" src="img/Facebook_logo_(square).png" alt="">
-        <img id="footer" src="img/instagram-logos-png-images-free-download-2.png" alt="" srcset="">
-        <img id="footer" src="img/1024px-Spotify_logo_without_text.svg.png" alt="">
+        <a id="planering" href="misc/planering.html">Planering</a>
+        <a id="footer" href="https://www.facebook.com/"><img  src="img/Facebook_logo_(square).png" alt=""></a>
+        <a id="footer" href="https://www.instagram.com/"><img src="img/instagram-logos-png-images-free-download-2.png" alt="" srcset=""></a>
+        <a id="footer" href="https://www.spotify.com/se/"><img src="img/1024px-Spotify_logo_without_text.svg.png" alt=""></a>
 
       
     </footer>
