--- a/kategori.html
+++ b/kategori.html
@@ -16,16 +16,15 @@
         <a href="tipsa.html">TIPSA</a>
         <div class="dropdown">
         <a  id="kategorier" href="#">KATEGORIER ⇓</a>
-            <div class="dropdown-content">
-                <a href="kategori.html">MUSIK</a>
-                <br><a href="">RECEPT</a>
-                <br><a href="">FILMER</a>
-                <br><a href="">BÖCKER</a>
-            </div>
         </div>
         <a href="omoss.html">OM OSS</a>
     </nav>
-
+    <div id="dropdown-content">
+        <a href="kategori.html">MUSIK</a>
+        <a href="">RECEPT</a>
+        <a href="">FILMER</a>
+        <a href="">BÖCKER</a>
+    </div>
     
 
     <div id="start"><img  src="img/bergstopp-tapet-3072x576-1736_124.jpg" alt=""></div>
@@ -43,10 +42,10 @@
             <p>Funeral is the thirteenth studio album by American rapper Lil Wayne. It was released on January 31, 2020, by Young Money Entertainment and Republic Records. It features guest appearances by Big Sean, Lil Baby, Adam Levine, Jay Rock, 2 Chainz</p>
         </article>
         <img id="b3" src="img/album1.jpg" alt="">
-        <article id="a3">
+        <a id="a3" href="justden.html">
             <h3>#3 Yeezus - Kayne West</h3>
             <p>Yeezus is the sixth studio album by American rapper and producer Kanye West. It was released on June 18, 2013, through Def Jam Recordings and Roc-A-Fella Records. West gathered a number of artists and close collaborators for the production.</p>
-        </article>
+        </a>
     </section>
     <section>
         <img id="b4" src="img/musik3.jpg" alt="">
@@ -65,12 +64,11 @@
             <p>When We All Fall Asleep, Where Do We Go? är ett musikalbum av Billie Eilish som utgavs i mars 2019. Detta var hennes första riktiga fullängdsalbum. Det utgavs på Interscope Records underetikett Darkroom.</p>
         </article>
     </section>
-
     <footer>
-        <a href="misc/planering.html">Planering</a>
-        <img id="footer" src="img/Facebook_logo_(square).png" alt="">
-        <img id="footer" src="img/instagram-logos-png-images-free-download-2.png" alt="" srcset="">
-        <img id="footer" src="img/1024px-Spotify_logo_without_text.svg.png" alt="">
+        <a id="planering" href="misc/planering.html">Planering</a>
+        <a id="footer" href="https://www.facebook.com/"><img  src="img/Facebook_logo_(square).png" alt=""></a>
+        <a id="footer" href="https://www.instagram.com/"><img src="img/instagram-logos-png-images-free-download-2.png" alt="" srcset=""></a>
+        <a id="footer" href="https://www.spotify.com/se/"><img src="img/1024px-Spotify_logo_without_text.svg.png" alt=""></a>
 
       
     </footer>
