skrev"om" sidan

--- a/omoss.html
+++ b/omoss.html
@@ -21,7 +21,7 @@
     </nav>
     <div id="dropdown-content">
         <a href="kategori.html">MUSIK</a>
-        <a href="">RECEPT</a>
+        <a href="kategori2.html">RECEPT</a>
         <a href="">FILMER</a>
         <a href="">BÖCKER</a>
     </div>
@@ -31,22 +31,13 @@
     <div id="start"><img  src="img/bergstopp-tapet-3072x576-1736_124.jpg" alt=""></div>
     
     <h2>OM TOVATOPP</h2>    
+
+    <div id="omsocial"> <a  href="https://www.facebook.com/"><img  src="img/Facebook_logo_(square).png" alt=""></a>
+        <a href="https://www.instagram.com/"><img src="img/instagram-logos-png-images-free-download-2.png" alt="" srcset=""></a>
+        <a  href="https://www.spotify.com/se/"><img src="img/1024px-Spotify_logo_without_text.svg.png" alt=""></a></div>
     <section>
-        <img id="b1" src="img/album1.jpg" alt="">
-        <article id="a1">
-            <h3>Yeezus - Kayne West</h3>
-            <p>Yeezus is the sixth studio album by American rapper and producer Kanye West. It was released on June 18, 2013, through Def Jam Recordings and Roc-A-Fella Records. West gathered a number of artists and close collaborators for the production. </p>
-        </article>
-        <img id="b2" src="img/recept1.jpg" alt="">
-        <article id="a2">
-            <h3>Ratatouille</h3>
-            <p>Layers of yellow squash, zucchini, eggplant, potato, and bell pepper on a bed of flavorful tomato and béchamel sauce... for a comforting veggie dinner</p>
-        </article>
-        <img id="b3" src="img/film1.jpg" alt="">
-        <article id="a3">
-            <h3>Gemini Man</h3>
-            <p>Gemini Man är en amerikansk action-thrillerfilm från 2019. Den är regisserad av Ang Lee med manus skrivet av David Benioff, Billy Ray och Darren Lemke. Huvudrollerna spelas av Will Smith, Mary Elizabeth Winstead, Clive Owen och Benedict Wong</p>
-        </article>
+        <article id="omtext">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse exercitationem accusantium aperiam quas sunt ratione adipisci voluptatem quia sapiente ullam eveniet, est laudantium blanditiis, facilis itaque dignissimos. Iusto, repellat sapiente?Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe odit repellat culpa accusantium consectetur ab fuga aspernatur, totam exercitationem similique magni unde maiores voluptatum incidunt molestiae quibusdam reiciendis quaerat illo?Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sed libero ea, ipsum fugit reiciendis blanditiis veritatis nostrum dicta quam repudiandae! Labore in, quidem dolor ad placeat error! Officia, a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque veritatis voluptatum pariatur, cum aperiam reprehenderit tempore quis hic perspiciatis dicta? Deserunt optio cum at repellendus deleniti quasi rem, quis id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo cumque praesentium officia non facere vel exercitationem nisi nam perspiciatis quisquam beatae blanditiis earum, error, facilis debitis eaque cupiditate tempora rem.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse exercitationem accusantium aperiam quas sunt ratione adipisci voluptatem quia sapiente ullam eveniet, est laudantium blanditiis, facilis itaque dignissimos. Iusto, repellat sapiente?Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe odit repellat culpa accusantium consectetur ab fuga aspernatur, totam exercitationem similique magni unde maiores voluptatum incidunt molestiae quibusdam reiciendis quaerat illo?Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sed libero ea, ipsum fugit reiciendis blanditiis veritatis nostrum dicta quam repudiandae! Labore in, quidem dolor ad placeat error! Officia, a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque veritatis voluptatum pariatur, cum aperiam reprehenderit tempore quis hic perspiciatis dicta? Deserunt optio cum at repellendus deleniti quasi rem, quis id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo cumque praesentium officia non facere vel exercitationem nisi nam perspiciatis quisquam beatae blanditiis earum, error, facilis debitis eaque cupiditate tempora rem.</article>
+        <img id="ombild" src="img/ombild.jpg" alt="">
     </section>
 
     <footer>
