--- a/misc/planering.html
+++ b/misc/planering.html
@@ -171,9 +171,11 @@
 
     <h3>Lektion vecka 9</h3>
     <!-- Fyll på med dokumentation här. -->
+    Vad borta nästan hela lektionen, läkarbesök. Återstående tid till att lägga till små detaljer på sidorna. 
 
     <h3>Lektion vecka 10</h3>
     <!-- Fyll på med dokumentation här. -->
+    Skrev koden till åtta nya html sidor. Lade till en embeded spoify sak. Ändrade lite i cssen. 
 
     <h3>Lektion vecka 11</h3>
     <!-- Fyll på med dokumentation här. -->
