--- a/tipsa.html
+++ b/tipsa.html
@@ -21,7 +21,7 @@
     </nav>
     <div id="dropdown-content">
         <a href="kategori.html">MUSIK</a>
-        <a href="">RECEPT</a>
+        <a href="kategori2.html">RECEPT</a>
         <a href="">FILMER</a>
         <a href="">BÖCKER</a>
     </div>
