--- a/kategori.html
+++ b/kategori.html
@@ -21,7 +21,7 @@
     </nav>
     <div id="dropdown-content">
         <a href="kategori.html">MUSIK</a>
-        <a href="">RECEPT</a>
+        <a href="kategori2.html">RECEPT</a>
         <a href="">FILMER</a>
         <a href="">BÖCKER</a>
     </div>
@@ -32,15 +32,15 @@
     <h2>MUSIK</h2>    
     <section>
         <img id="b1" src="img/musik1.PNG" alt="">
-        <article id="a1">
+        <a id="a1" href="justden3.html">
             <h3> #1 Dancing - Disquiiet</h3>
             <p>Sådär bra låt av en oerfaren producent. Går tyvärr i min klass och är extremt högljud. Låten får en att somna. På sidan är producenten föredetta basketproffs och en misslyckad volleyboll champion. Han är även extremt dålig på bakåtvolter.</p>
-        </article>
+        </a>
         <img id="b2" src="img/musik2.jpg" alt="">
-        <article id="a2">
+        <a id="a2" href="justden2.html">
             <h3>#2 Funeral - Lil Wayne</h3>
             <p>Funeral is the thirteenth studio album by American rapper Lil Wayne. It was released on January 31, 2020, by Young Money Entertainment and Republic Records. It features guest appearances by Big Sean, Lil Baby, Adam Levine, Jay Rock, 2 Chainz</p>
-        </article>
+        </a>
         <img id="b3" src="img/album1.jpg" alt="">
         <a id="a3" href="justden.html">
             <h3>#3 Yeezus - Kayne West</h3>
@@ -49,20 +49,20 @@
     </section>
     <section>
         <img id="b4" src="img/musik3.jpg" alt="">
-        <article id="a4">
+        <a id="a4" href="justden4.html">
             <h3>#4 Fine line - Harry Styles</h3>
             <p>Fine Line is the second studio album by English singer and songwriter Harry Styles, released on 13 December 2019 by Columbia and Erskine Records. Preceded by three singles—"Lights Up", "Watermelon Sugar" and "Adore You".</p>
-        </article>
+        </a>
         <img id="b5" src="img/musik4.png" alt="">
-        <article id="a5">
+        <a id="a5" href="justden5.html">
             <h3>#5 Cuz I love you - Lizzo</h3>
             <p>Cuz I Love You is the third studio album and debut major label LP by American rapper and singer Lizzo. It was released through Nice Life and Atlantic Records on April 19, 2019. Features guest rappers Missy Elliott and Gucci Mane</p>
-        </article>
+        </a>
         <img id="b6" src="img/musik5.jpg" alt="">
-        <article id="a6">
+        <a id="a6" href="justden6.html">
             <h3>#6 When we all fall asleep - Billie Eilish</h3>
             <p>When We All Fall Asleep, Where Do We Go? är ett musikalbum av Billie Eilish som utgavs i mars 2019. Detta var hennes första riktiga fullängdsalbum. Det utgavs på Interscope Records underetikett Darkroom.</p>
-        </article>
+        </a>
     </section>
     <footer>
         <a id="planering" href="misc/planering.html">Planering</a>
