länkat html undersidor

--- a/kategori.html
+++ b/kategori.html
@@ -22,8 +22,8 @@
     <div id="dropdown-content">
         <a href="kategori.html">MUSIK</a>
         <a href="kategori2.html">RECEPT</a>
-        <a href="">FILMER</a>
-        <a href="">BÖCKER</a>
+        <a href="kategori3.html">FILMER</a>
+        <a href="kategori4.html">BÖCKER</a>
     </div>
     
 
