--- a/index.html
+++ b/index.html
@@ -22,30 +22,30 @@
     <div id="dropdown-content">
         <a href="kategori.html">MUSIK</a>
         <a href="kategori2.html">RECEPT</a>
-        <a href="">FILMER</a>
-        <a href="">BÖCKER</a>
+        <a href="kategori3.html">FILMER</a>
+        <a href="kategori4.html">BÖCKER</a>
     </div>
     
 
     <div id="start"><img  src="img/bergstopp-tapet-3072x576-1736_124.jpg" alt=""></div>
     
     <h2>Populärast just nu</h2>    
-    <section>
+    <section id="index">
         <img id="b1" src="img/album1.jpg" alt="">
         <a id="a1" href="justden.html">
             <h3>Yeezus - Kayne West</h3>
             <p>Yeezus is the sixth studio album by American rapper and producer Kanye West. It was released on June 18, 2013, through Def Jam Recordings and Roc-A-Fella Records. West gathered a number of artists and close collaborators for the production. </p>
         </a>
         <img id="b2" src="img/recept1.jpg" alt="">
-        <article id="a2">
+        <a id="a2" href="justden21.html">
             <h3>Ratatouille</h3>
             <p>Layers of yellow squash, zucchini, eggplant, potato, and bell pepper on a bed of flavorful tomato and béchamel sauce... for a comforting veggie dinner</p>
-        </article>
+        </a>
         <img id="b3" src="img/film1.jpg" alt="">
-        <article id="a3">
+        <a id="a3" href="justden31.html">
             <h3>Gemini Man</h3>
             <p>Gemini Man är en amerikansk action-thrillerfilm från 2019. Den är regisserad av Ang Lee med manus skrivet av David Benioff, Billy Ray och Darren Lemke. Huvudrollerna spelas av Will Smith, Mary Elizabeth Winstead, Clive Owen och Benedict Wong</p>
-        </article>
+        </a>
     </section>
 
     <footer>
