--- a/misc/planering.html
+++ b/misc/planering.html
@@ -17,6 +17,10 @@
         th {
             border: 1px solid black
         }
+
+        img {
+            width: 500px;
+        }
     </style>
 
 </head>
@@ -33,6 +37,7 @@
 
     <h3>2.1 Handskiss</h3>
     <!-- Här lägger du en bild på din handskiss av layouten. Viktigt att du beskriver vilka boxelement som ska användas. Visa även hur du tänker med ditt grid (Hur många kolumner?) -->
+    <img src="../img/Tova-Top.jpg" alt="">
 
     <h3>2.2 Schema</h3>
     <!-- Vad ska du göra när? Inte för detaljerat. -->
@@ -133,6 +138,7 @@
             </td>
             <td>
                 <!-- Vad görs utanför lektionen vecka 11? -->
+                Kod till 12 nya html sidor 
             </td>
         </tr>
 
@@ -179,17 +185,21 @@
 
     <h3>Lektion vecka 11</h3>
     <!-- Fyll på med dokumentation här. -->
+    Skrev kod till html sidor, fokuserade på att massproducera de individuella sidorna för de specifika tipsen. Lade till lite mer js för fler knappar. 
 
     <h3>Lektion vecka 12</h3>
     <!-- Fyll på med dokumentation här. -->
+    Nya sidor, justeringar, fixade media queries för ipad och iphone
+
 
     <h2>4. Testning</h2>
     <!-- Testa i Chrome + Firefox eller Safari (på både dator och mobil). Skiljer sig resultatet? Har du behövt anpassa ditt kod/innehåll efter de olika webbläsarna? Hur gick valideringen? Vad säger contrastchecker.com om text/bakgrundsfärg? Hur ser resultatet ut på en riktig telefon? -->
-
+    Det mesta fungerade bra i andra webbläsare. Allt såg likadant ut i både chrome, firefox och edge. Några fonter såg lite annorlunda ut med det var inget anmärkningsvärt. Dock var det en del i min js kod som inte fungerade i egde. Det fungerar i både chrome och firefox men inte edge. Efter som det inte var så stor grej så valde jag att inte ändra det just nu. 
     <h2>5. Utvärdering</h2>
     <!-- Ex: Vad gick bra/mindre bra? (i arbetet/din förmåga).
     Nyanserat: "hur hade det blivit om jag istället hade...?"
     Konkreta förbättringsförslag i produkt + process. -->
+    Det gick bättre än vad jag trodde att jobba såhär självständigt. Jag tyckte att det var väldigt roligt att vi fick välja våra projekt själva och det blev därför mycket roligare att fortsätta jobba på det t.ex. hemma. Nu i efterhand känns det som att jag kanske hade velat lägga mer tid på kvalitet i detaljerna istället för kvantitet av innehållet. Jag skulle kanske arbeta mer med designen så att layouten blir snyggare. Det var i och för sig ganska svårt att få hjälp under detta projekt, vilket jag förstår eftersom vi är så många i klassen men det mesta löste sig då man kunde fråga varandra och googla. Tyckte även det var lite oklart vad som var krav på att ha med så jag ber om ursäkt om jag missade någonting, fråga gärna mig i så fall så kanske jag kan komplettera med det. 
 
 </body>
 
