litet h i header och id i footer

--- a/kategori4.html
+++ b/kategori4.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow|Quattrocento+Sans|Quicksand&display=swap" rel="stylesheet">
 </head>
 <body>
-    <Header><img id="logo" src="img/logo.png" alt=""></Header>
+    <header><img id="logo" src="img/logo.png" alt=""></header>
 
     <nav id="meny">
         <a href="index.html">HEM</a>
@@ -67,8 +67,8 @@
     </section>
     <footer>
         <a id="planering" href="misc/planering.html">Planering</a>
-        <a id="footer" href="https://www.facebook.com/"><img  src="img/Facebook_logo_(square).png" alt=""></a>
-        <a id="footer" href="https://www.instagram.com/"><img src="img/instagram-logos-png-images-free-download-2.png" alt="" srcset=""></a>
+        <a href="https://www.facebook.com/"><img  src="img/Facebook_logo_(square).png" alt=""></a>
+        <a href="https://www.instagram.com/"><img src="img/instagram-logos-png-images-free-download-2.png" alt="" srcset=""></a>
         <a id="footer" href="https://www.spotify.com/se/"><img src="img/1024px-Spotify_logo_without_text.svg.png" alt=""></a>
 
       
