--- a/justden42.html
+++ b/justden42.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <Header><img id="logo" src="img/logo.png" alt=""></Header>
+    <header><img id="logo" src="img/logo.png" alt=""></header>
 
     <nav id="meny">
         <a href="index.html">HEM</a>
@@ -76,8 +76,8 @@
 
     <footer>
         <a id="planering" href="misc/planering.html">Planering</a>
-        <a id="footer" href="https://www.facebook.com/"><img  src="img/Facebook_logo_(square).png" alt=""></a>
-        <a id="footer" href="https://www.instagram.com/"><img src="img/instagram-logos-png-images-free-download-2.png" alt="" srcset=""></a>
+        <a href="https://www.facebook.com/"><img  src="img/Facebook_logo_(square).png" alt=""></a>
+        <a href="https://www.instagram.com/"><img src="img/instagram-logos-png-images-free-download-2.png" alt="" srcset=""></a>
         <a id="footer" href="https://www.spotify.com/se/"><img src="img/1024px-Spotify_logo_without_text.svg.png" alt=""></a>
 
       
