ändrade till ny version

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <footer>
         <a id= "planering" href="misc/planering.html">Planering</a>
         <a href="https://www.facebook.com/"><img  src="img/Facebook_logo_(square).png" alt=""></a>
-        <a href="https://www.instagram.com/"><img src="img/instagram-logos-png-images-free-download-2.png" alt="" srcset=""></a>
+        <a href="https://www.instagram.com/"><img src="img/instagram-logos-png-images-free-download-2.png" alt=""></a>
         <a id="footer" href="https://www.spotify.com/se/"><img src="img/1024px-Spotify_logo_without_text.svg.png" alt=""></a>
 
       
