--- a/misc/planering.html
+++ b/misc/planering.html
@@ -214,6 +214,9 @@
     NYTT: 
     Jag skrev under testningen att mitt js inte fungerade i edge men felet låg i css:en. Jag upptäckte att det var opacity: 0; som inte fungerade i varken edge eller internet explorer. Jag researchade lite och hittade att det tydligen är ett känt fel, erkänt fel av microsoft att de webbläsarna inte kan ta den strängen av kod. Jag googlade mig då fram till att det fanns en äldre funktion som gjorde samma sak som heter alpha filter. När jag la till lite sådana rader kod iställlet fungerade sidan sen precis som jag ville. 
 
+    Jag har testat att validera min html koden genom att klistra in koden i en validator. Den visade ett par fel, tex tyckte den att det var ett problem att alla articles inte hade headings men det är ett medvetet val jag  har gjort. Den tyckte även inte om att det fanns text bitar som skulle bestämma saker som höjder osv i html som var tomma. De sakerna bestäms istället i min css. 
+
     Det har varit väldigt lärorikt att sitta med ett stort projekt på det här sätt där man fick arbeta mycket själv och man fick lära sig hur man ska hantera problem som kan uppstå påvägen. Jag skulle nog säga att det är det viktigaste jag tar med mig ur detta projekt, hur man gör när man träffar på problem. Det känns viktigt att veta hur man ska googla för att hitta de rätta svaren och det känns som att det finns en härlig community som anstränger sig för hjälpa andra och lära andra det de vet. Såklart tar jag även med mig mycket om själva koden. Jag har lärt mig otroligt många begrepp och fått en djupare förståelse av hur en större sida med många undersidor är uppbyggd. Jag tror att det har varit bra för mig att arbeta själv i detta projekt. Jag var inte alls säker på kod och frågade ofta efter hjälp men efter detta projekt så känner jag mig mycket självsäkrare på det jag gör och kan lösa de flesta av mina motgångar själv. 
+
 
 </html>
